# beehive

./: .gitignore  .pre-commit-config.yaml  README.md  bee_counter.py  inference_requirements.txt  pyproject.toml  report.md  requirements.txt  splits.json
beehive/: __main__.py  dataset.py  eval.py  gaussian_utils.py  inference.py  loss.py  model.py  modules.py  postprocess.py  train.py
tests/: conftest.py  test_eval.py  test_loss.py  test_modules.py
