[tool.poetry]
name = "beehive"
version = "1.0.0"
description = "Counting bees using AI."
authors = ["Aadhithya <aadhithya.s@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = {url = "https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp39-cp39-linux_x86_64.whl"}
albumentations = "^1.3.0"
typer = "^0.7.0"
matplotlib = "^3.6.3"
pytorch-lightning = "^1.9.0"
tensorboard = "^2.11.2"
torchvision = {url = "https://download.pytorch.org/whl/cu116/torchvision-0.14.1%2Bcu116-cp39-cp39-linux_x86_64.whl"}
loguru = "^0.6.0"
torchmetrics = "^0.11.1"
onnxruntime-gpu = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
flake8 = "^6.0.0"
pytest = "^7.2.1"
black = "^23.1.0"
torchtest = "^0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
